tests/expectations/compiler/integers/u16/max_fail.out
Error [ETYC0372008]: The value 65536 is not a valid `u16`
    --> compiler-test:4:18
     |
   4 |     let a: u16 = 65536u16;
     |                  ^^^^^^^^
Error [ETYC0372083]: A program must have at least one entry point fn.
    --> compiler-test:2:9
     |
   2 | program test.aleo { }
     |         ^^^^^^^^^
